Realizamos cambios en los titulos de la pagina web

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>Hola mundo desde el curso avanzado de javascript</h1>
+    <h5>Wiliam sigindioy</h5>
     <script src="/js/objetos.js"></script>
 </body>
 </html>
